--- a/webshop/appsettings.json
+++ b/webshop/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseConnection": "Server=localhost;Database=webshopdb;User ID=sa;Password=SQL;"
+  }
 }
