--- a/webshop/appsettings.json
+++ b/webshop/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseConnection": "Server=localhost;Database=webshopdb;User ID=sa;Password=SQL;"
+    "DatabaseConnection": "Server=localhost;Database=webshopdb;User ID=sa;Password=SQL;TrustServerCertificate=True;"
   }
 }
