Added login/register using JWT tokens, authorized endpoints, admin only endpoints, added logging for CRUD operations on entities + read-only endpoints for logs, added Automapper to convert scaffolded models into DTO, fixed some URLS, small code refactor

--- a/webshop/efpt.config.json
+++ b/webshop/efpt.config.json
@@ -31,6 +31,10 @@
          "ObjectType": 0
       },
       {
+         "Name": "[dbo].[Logs]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Order]",
          "ObjectType": 0
       },
